import React from 'react';
import ReactDOM from 'react-dom';
import renderer from 'react-test-renderer';
import User from './User';

it('renders without crashing', () => {
  const div = document.createElement('div');
  ReactDOM.render(<User />, div);
  ReactDOM.unmountComponentAtNode(div);
});


describe('Snapshot tests', () => {

  it('renders the UI as expected', () => {
    const tree = renderer
    .create(<User
      id={42}
      name={'alice'}
      avatar={'https://robohash.org/itaquevoluptatumrerum.jpg?size=200x200&set=set1'}
      inSession={true}
      onStage={true}
    />)
    .toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('renders the UI as expected', () => {
    const tree = renderer
    .create(<User
      id={42}
      name={'alice'}
      avatar={'https://robohash.org/itaquevoluptatumrerum.jpg?size=200x200&set=set1'}
      inSession={true}
      onStage={false}
    />)
    .toJSON();
    expect(tree).toMatchSnapshot();
  });

});
